# FMD-sensitivity-for-tokenization-and-embeddings

./: .commit_msg.txt  .flake8  .gen_counts.txt  .gen_counts_after.txt  .gitignore  .last_head.txt  .last_subject.txt  CITATION.cff  LICENSE  Makefile  PODSUMOWANIE_PROJEKTU.md  README.md  TYDZIEN_1_PODSUMOWANIE.md  TYDZIEN_2_PODSUMOWANIE.md  analyze_results.py  demo_embeddings.py  demo_fmd.py  demo_preprocessing.py  draft.tex  extract_pdf.py  final_results.ipynb  main.py  pyproject.toml  requirements-ci.txt  requirements.txt  rerun_after_current.sh  run_ablation_study.py  run_all_analyses.sh  run_cross_dataset_validation.py  run_interaction_analysis.py  run_multi_genre_analysis.py  run_sample_size_ablation.py  validate_week2.py
configs/: config.yaml  genre_mapping.yaml  sensitivity_pivot.yaml
docs/: ANALIZA_WYNIKOW_SENSITIVITY.md  EXECUTIVE_SUMMARY_SENSITIVITY.md  INSTRUKCJA_URUCHAMIANIA.md  PAPER_FINDINGS.md  PUBLICATION_READINESS.md  README_SENSITIVITY_ANALYSIS.md  SENSITIVITY_PIVOT_RESULTS.md  SENSITIVITY_SZCZEGOLOWA_ANALIZA.md
paper/: paper.tex  references.bib
scripts/: analyze_results.py  beautify_readme.py  build_results_notebook.py  calc_raw_fmd_tables.py  demo_embeddings.py  demo_fmd.py  download_folk_dataset.py  explore_midicaps.py  generate_draft_figures.py  generate_draft_tables.py  generate_pivot_plots.py  generate_publication_plots.py  generate_simple_charts.py  generate_starter_midis.py  monitor_cross_val.sh  run_ablation_study.py  run_cross_dataset_validation.py  run_embedding_architecture_audit.py  run_experiment.py  run_full_study.py  run_per_song.py  (+12 more)
(+135 files in other folders)
